--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "canvas-confetti": "^1.9.4",
+    "framer-motion": "^12.31.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
