--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.31.0",
     "next": "16.1.6",
+    "next-auth": "^4.24.13",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
